# Cortex-plus-plus

./: CMakeLists.txt  main.cpp
Examples/: BostonHousingPredictions.cpp
Experiment/: simd_vs_std.xlsx
dl_core/: dev_note.md  todo_list.md
dl_core/include/Common/: NoCopyable.h
dl_core/include/DLEngine/: DLEngine.h
dl_core/include/DeviceAllocator/: DeviceAllocator.h
dl_core/include/Dtypes/: Dtype.h
dl_core/include/Functions/: loss.h  math_utils.h  nn_utils.h
dl_core/include/Graphs/: autograd_graph.h
dl_core/include/Layers/: AddLayer.h  BaseLayer.h  BroadcastLayer.h  CosLayer.h  DivLayer.h  ExpLayer.h  LogLayer.h  MulLayer.h  PowLayer.h  SinLayer.h  SubLayer.h  SumToLayer.h  TanLayer.h  TransposeLayer.h  aTanLayer.h
dl_core/include/Layers/Functions/: CosLayer.h  ExpLayer.h  LogLayer.h  PowLayer.h  SinLayer.h  TanLayer.h  aTanLayer.h
dl_core/include/Layers/Kernels/: DeviceKernel.h
dl_core/include/Layers/Kernels/cuda/: add_kernel_cuda.h  div_kernel_cuda.h  mul_kernel_cuda.h  pow_kernel_cuda.h  sub_kernel_cuda.h  tranpose_kernel_cuda.h
dl_core/include/Layers/Kernels/x86/: math_kernel_cpu.h  nn_kernel_cpu.h
dl_core/include/Layers/Operators/: AddLayer.h  DivLayer.h  MatmulLayer.h  MulLayer.h  SubLayer.h
dl_core/include/Layers/nn/: CrossEntropyLayer.h  LinearLayer.h  MSELossLayer.h  ReLuLayer.h  SigmoidLayer.h  SoftmaxLayer.h
dl_core/include/Models/: BaseModel.h  Sequential.h
dl_core/include/Modules/: BaseModule.h  Sigmoid.h  Softmax.h
dl_core/include/Modules/Loss/: BaseLoss.h  CrossEntropyLoss.h
dl_core/include/NN/Modules/: BaseModule.h  Linear.h  ReLu.h  Sigmoid.h
dl_core/include/NN/Modules/Loss/: MSELoss.h
dl_core/include/Optimizers/: BaseOptimizer.h
dl_core/include/Random/: RandomEngine.h
dl_core/include/Tensor/: Tensor.h  TensorBaseImpl.h  Tensor_utils.h  math_utils.h
dl_core/include/Tensor/Buffer/: Buffer.h
dl_core/include/avx2_extension/: avx2_common_ext.h  avx2_math_ext.h
dl_core/src/DLEngine/: DLEngine.cpp
dl_core/src/DeviceAllocator/: DeviceAllocator.cpp
dl_core/src/Functions/: loss.cpp  math_utils.cpp  nn_utils.cpp
dl_core/src/Graphs/: autograd_graph.cpp
dl_core/src/Layers/: AddLayer.cpp  BaseLayer.cpp  BroadcastLayer.cpp  CosLayer.cpp  DivLayer.cpp  ExpLayer.cpp  LogLayer.cpp  MulLayer.cpp  PowLayer.cpp  SinLayer.cpp  SubLayer.cpp  SumToLayer.cpp  TanLayer.cpp  TransposeLayer.cpp  aTanLayer.cpp
dl_core/src/Layers/Functions/: CosLayer.cpp  ExpLayer.cpp  LogLayer.cpp  PowLayer.cpp  SinLayer.cpp  TanLayer.cpp  aTanLayer.cpp
dl_core/src/Layers/Kernels/: DeviceKernel.cpp
dl_core/src/Layers/Kernels/cuda/: add_kernel_cuda.cpp  div_kernel_cuda.cpp  mul_kernel_cuda.cpp  pow_kernel_cuda.cpp  sub_kernel_cuda.cpp  transpose_kernel_cuda.cpp
dl_core/src/Layers/Kernels/x86/: add_kernel_cpu.cpp  arctan_kernel_cpu.cpp  cos_kernel_cpu.cpp  cross_entropy_kernel_cpu.cpp  div_kernel_cpu.cpp  exp_kernel_cpu.cpp  linear_kernel_cpu.cpp  log_kernel_cpu.cpp  matmul_kernel_cpu.cpp  mse_loss_kernel_cpu.cpp  mul_kernel_cpu.cpp  pow_kernel_cpu.cpp  relu_kernel_cpu.cpp  sigmoid_kernel_cpu.cpp  sin_kernel_cpu.cpp  softmax_kernel_cpu.cpp  sub_kernel_cpu.cpp  sum_kernel_cpu.cpp  tan_kernel_cpu.cpp  transpose_kernel_cpu.cpp
dl_core/src/Layers/Operators/: AddLayer.cpp  DivLayer.cpp  MatmulLayer.cpp  MulLayer.cpp  SubLayer.cpp
dl_core/src/Layers/nn/: CrossEntropyLayer.cpp  LinearLayer.cpp  MSELossLayer.cpp  ReLuLayer.cpp  SigmoidLayer.cpp  SoftmaxLayer.cpp
dl_core/src/Modules/: Linear.cpp  ReLu.cpp  Sigmoid.cpp  Softmax.cpp
dl_core/src/Modules/Loss/: CrossEntropyLoss.cpp  MSELoss.cpp
dl_core/src/NN/Modules/: Linear.cpp  ReLu.cpp  Sigmoid.cpp
dl_core/src/NN/Modules/Loss/: MSELoss.cpp
dl_core/src/Random/: RandomEngine.cpp
dl_core/src/Tensor/: Tensor.cpp  math_utils.cpp
dl_core/src/Tensor/Buffer/: Buffer.cpp
test/tensor/: tensor_test.cpp
